--- a/Homework2.css
+++ b/Homework2.css
@@ -1,3 +1,8 @@
 #hello {
-    background-color: red;
+    background-color: aquamarine;
+    color: azure;
+}
+
+body {
+    background-color: cornflowerblue;
 }
