--- a/Homework2.css
+++ b/Homework2.css
@@ -45,17 +45,17 @@ h2, label, input {
 }
 
 #inner-box-left {
-    width: 25%;
+    width: 29%;
 }
 
 #inner-box-right {
-    margin-left: 4vh;
-    margin-left: 4%;
-    width: 25%;
+    margin-left: 2vh;
+    margin-left: 2%;
+    width: 29%;
 }
 
 #outer-box {
-    width: 74%;
+    width: 60%;
 }
 
 #username {
@@ -64,4 +64,39 @@ h2, label, input {
 
 #fname, #lname {
     width: 100%
+}
+
+#left-box {
+    width: 100%
+}
+
+#middle-box {
+    width: 60%;
+    margin-left: 2%;
+    margin-left: 2vh;
+    margin-right: 2%;
+    margin-right: 2vh;
+}
+
+#right-box {
+    width: 50%
+}
+
+#box-3 {
+    display: inline-flex;
+    width: 60%;
+}
+
+#radio-checks {
+    display: inline-flex;
+    width: 60%;
+}
+
+#middle-option {
+    margin-left: 4%;
+    margin-right: 4%;
+}
+
+#xs-box-left {
+    margin-right: 2%;
 }
