--- a/Homework2.css
+++ b/Homework2.css
@@ -7,31 +7,48 @@ body {
 }
 
 form {
-    border-radius: 25px;
-    background-color: white;
     margin-left: 20vh;
     margin-left: 20%;
     margin-right: 20vh;
     margin-right: 20%;
     margin-top: 5vh;
     margin-top: 5%;
-    margin-bottom: 20vh;
-    margin-bottom: 20%;
+    margin-bottom: 5;
+    margin-bottom: 5%;
+    width: 70%;
+    display: inline-flex
 }
 
-#box {
-    padding-left: 2vh;
-    padding-left: 2%;
-    padding-top: 0.5vh;
-    padding-top: 0.5%;
-    padding-bottom: 0.5vh;
-    padding-bottom: 0.5%;
+#checkout-form {
+    border-radius: 25px;
+    padding-left: 5vh;
+    padding-left: 5%;
+    padding-bottom: 2vh;
+    padding-bottom: 2%;
+    background-color: whitesmoke;
+    width: 60%
+}
+
+#shopping-cart {
+    border-radius: 25px;
+    background-color: whitesmoke;
+    width: 35%;
+    max-height: 60ch;
+    margin-left: 4%;
+}
+
+#shopping-cart h2 {
+    text-align: center;
+    padding-top: 4vh;
+    padding-top: 4%;
 }
 
 h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 150;
+    padding-top: 2vh;
+    padding-top: 2%;
 }
 
 h2, label, input { 
@@ -45,17 +62,17 @@ h2, label, input {
 }
 
 #inner-box-left {
-    width: 29%;
+    width: 44%;
 }
 
 #inner-box-right {
     margin-left: 2vh;
     margin-left: 2%;
-    width: 29%;
+    width: 44%;
 }
 
 #outer-box {
-    width: 60%;
+    width: 90%;
 }
 
 #username {
@@ -84,7 +101,7 @@ h2, label, input {
 
 #box-3 {
     display: inline-flex;
-    width: 60%;
+    width: 90%;
 }
 
 #radio-checks {
