--- a/Homework2.css
+++ b/Homework2.css
@@ -20,7 +20,6 @@ form {
 }
 
 #checkout-form {
-    border-radius: 25px;
     padding-left: 5vh;
     padding-left: 5%;
     padding-bottom: 2vh;
@@ -30,10 +29,9 @@ form {
 }
 
 #shopping-cart {
-    border-radius: 25px;
     background-color: whitesmoke;
     width: 35%;
-    max-height: 60ch;
+    max-height: 57ch;
     margin-left: 4%;
 }
 
@@ -51,7 +49,7 @@ h1 {
     padding-top: 2%;
 }
 
-h2, label, input { 
+h2, label, input, p { 
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
 }
@@ -125,4 +123,53 @@ button {
 hr {
     width: 90%;
     margin-left: 0%;
+}
+
+#cart-items {
+    background-color: white;
+    margin-left: 6%;
+    margin-right: 6%;
+}
+
+#item, #coupon, #total{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 6%;
+    margin-right: 6%;
+    margin-top: 6%;
+    border-bottom: 1px solid gainsboro;
+}
+
+p {
+    color: gray;
+    font-size: medium; 
+}
+
+#coupon h5, #coupon p {
+    color: green;
+}
+
+#total {
+    margin-bottom: 4%;
+    border-bottom: none;
+}
+
+.input-group {
+    background-color: whitesmoke;
+    padding-top: 30px;
+    border: none;
+    padding-right: 0%;
+    margin-right: 0%;
+}
+
+.input-group-append {
+    width: 100px;
+}
+
+.input-group-append :hover {
+    background: green;
+}
+
+#first-product, #first-price {
+    padding-top: 8px;
 }
